src/test/deca/context/invalid/decl_var_void_in_method.deca
// Test la règle 3.17: une variable est de type void dans une méthode

class A  {
    void diplayNumber(){
        void x;
    }
}

// Resultat:
//# src/test/deca/context/invalid/decl_var_void_in_method.deca:5:13: Type can't be void : rule 3.17
